--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "plan-xp",
+  "name": "planxp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://matheusrmell0.github.io/Plan-XP",
+  "homepage": "https://matheusrmell0.github.io/PlanXP",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
